fixing spacing and borders for the hiddenWordContainer and hiddenWordSpaces

--- a/style.css
+++ b/style.css
@@ -109,8 +109,12 @@ h2 {
 }
 
 #hiddenWordContainer {
+	width: 800px;
+	height: 100px;
+}
+
+#hiddenWordSpaces {
 	font-size: 50px;
-	flex-wrap: wrap;
 }
 
 #alphabetButtons {
